--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -56,6 +56,10 @@
 }
 
 @media screen {
+    .tm-main-nav {
+        box-shadow: 0px 0px 10px 1px rgba(61, 55, 61, 0.7);
+    }
+
     .tm-nav-item:hover {
         background-color: lightskyblue;
     }
