--- a/FL12_Webinar_HW5/css/style.css
+++ b/FL12_Webinar_HW5/css/style.css
@@ -2,12 +2,12 @@
   width: 900px;
   margin: auto;
   padding: 3rem;
-  background-color: #b3ffb3;
+  background-color: #b3ffb3; 
   text-align: center;
   border-radius: 10px
 }
 
-#userGetterBtn, #postBlock button {
+#postBlock button {
   display: block;
   width: 100%;
   padding: 1rem;
@@ -19,8 +19,8 @@
   font-family: 'Courier New', Courier, monospace;
   font-size: 2rem;
   font-weight: 600;
-  color: #b3ffb3;
-}
+  color: #b3ffb3; 
+} 
 
 #userList {
   list-style: none;
